; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/io/extr_vhpet.c_vhpet_timer_clear_isr.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/io/extr_vhpet.c_vhpet_timer_clear_isr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vhpet = type { i32, i32 }

@.str = private unnamed_addr constant [38 x i8] c"vhpet timer %d irq incorrectly routed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vhpet*, i32)* @vhpet_timer_clear_isr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vhpet_timer_clear_isr(%struct.vhpet* %0, i32 %1) #0 {
  %3 = alloca %struct.vhpet*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.vhpet* %0, %struct.vhpet** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.vhpet*, %struct.vhpet** %3, align 8
  %7 = getelementptr inbounds %struct.vhpet, %struct.vhpet* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* %4, align 4
  %10 = shl i32 1, %9
  %11 = and i32 %8, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %36

13:                                               ; preds = %2
  %14 = load %struct.vhpet*, %struct.vhpet** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @vhpet_timer_ioapic_pin(%struct.vhpet* %14, i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, 0
  %19 = zext i1 %18 to i32
  %20 = load i32, i32* %4, align 4
  %21 = sext i32 %20 to i64
  %22 = inttoptr i64 %21 to i8*
  %23 = call i32 @KASSERT(i32 %19, i8* %22)
  %24 = load %struct.vhpet*, %struct.vhpet** %3, align 8
  %25 = getelementptr inbounds %struct.vhpet, %struct.vhpet* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @vioapic_deassert_irq(i32 %26, i32 %27)
  %29 = load i32, i32* %4, align 4
  %30 = shl i32 1, %29
  %31 = xor i32 %30, -1
  %32 = load %struct.vhpet*, %struct.vhpet** %3, align 8
  %33 = getelementptr inbounds %struct.vhpet, %struct.vhpet* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = and i32 %34, %31
  store i32 %35, i32* %33, align 4
  br label %36

36:                                               ; preds = %13, %2
  ret void
}

declare dso_local i32 @vhpet_timer_ioapic_pin(%struct.vhpet*, i32) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @vioapic_deassert_irq(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
